add background video player

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -31,20 +31,25 @@
   -o-transition: border .2s ease-in-out;
   transition: border .2s ease-in-out;
   overflow: hidden;
+  position: relative;
   .thumbnail-img {
     border-radius: 5px !important;
     overflow: hidden;
-  }
-}
-.caption {
-  padding: 10px 0 !important;
-  color: white !important;
-  font-weight: 600;
-  transition:  all .2s ease;
-  &:hover {
+  } 
+  &:hover .caption {
     color : $primary_color !important;
     transition:  all .2s ease;
   }
+}
+.caption {
+  padding-top: 10px !important;
+  color: white !important;
+  font-weight: 600;
+  font-size: 15px;
+  text-transform: capitalize;
+  text-align: center;
+  text-transform: uppercase;
+  transition:  all .2s ease;
 }
 .sections {
   display: flex;
@@ -57,4 +62,95 @@
   font-size: 24px;
   font-weight: 700;
   text-transform: capitalize;
+}
+.movie-img {
+  width: 274px;
+  height: 402px;
+}
+.movie-label {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color : $secondary_color;
+  background: $bg_button_color;
+  border-radius: 5px;
+}
+
+
+.video-container {
+  width: 100vw;
+  height: 100vh;
+}
+iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 118vh;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .video-container iframe {
+    height: 76.25vw;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .video-container iframe {
+    width: 177.78vh;
+  }
+}
+
+.myVideo {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  height: 100%;
+  // background-color: rgba(0,0,0, .4);
+}
+
+ .movie-info {
+  position: absolute;
+  top: 55%;
+  transform: translateY(-50%);
+  left: 100px;
+  text-align: left;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  max-width: 500px;
+
+  h1 {
+    font-size: 70px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+  p {
+    font-weight: 500;
+    color : #bbb;
+  }
+  .movie-info-action {
+    width: 40%;
+    color : $secondary_color;
+    border: 1px solid $secondary_color;
+    margin-top: 25px;
+    backdrop-filter: blur(20px);
+    border-radius: 10px;
+    padding: 10px 0;
+    background-color: transparent;
+    transition: all .3s ease;
+    font-weight: 500;
+    &:hover {
+      background-color: $secondary_color;
+      color : #fff;
+      transition: all .3s ease;
+    }
+  }
 }
