--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -1,6 +1,11 @@
 body {
-  background-image: linear-gradient(170deg, rgb(15, 22, 36), rgb(5, 7, 11));
+  background-image: linear-gradient(170deg, rgb(15, 22, 36), rgb(5, 7, 11)) !important;
   color : #fff !important;
+  font-family: 'Poppins', sans-serif !important;
+  height: auto !important;
+}
+html {
+  height: auto !important;
 }
 a {
   text-decoration: unset !important;
