--- a/styles/sass/_seats.scss
+++ b/styles/sass/_seats.scss
@@ -2,11 +2,12 @@
   width: 40%;
   min-height: 720px;
   border: 2px solid black;
-  position: relative;
-  left: 30%;
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
   padding-top: 30px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
   background-color:#C4DFE6;
   display: flexbox;
   flex-wrap: wrap;
@@ -14,28 +15,31 @@
 
 .seat-container .alphabet{
   width: 25px;
-  height: 22px;
+  height: 25px;
   border: 1px solid #FB6542;
-  position: relative;
-  left: 50px;
-  margin-top: 10px;
-  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
+  text-transform: uppercase;
   background-color: #FB6542;
 }
-
-.seat-container .alphabet > p{
-  left: 6px;
-  position:absolute ;
-  top:-14px;
-  
+.seat-container .line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 40px;
+  padding: 10px;
 }
+.linenumber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+}
+
 .seat-container .linenumber>button{
-  position: relative;
-  left:30px;
-  bottom: 20px;
   border:1px solid #FB6542;
- 
 }
 .seat-container .linenumber>button:hover{
   background-color:greenyellow;
@@ -46,89 +50,61 @@
   height: 10px;
   background-color: black;
 }
-.seat-container .note{
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 50px;
-  top: 35px;
+.notes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 25px;
+}
+.note {
+  display: flex;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  font-size: 13px;
+  p {
+    margin: 0 !important;
+  }
+  .box-color {
+    width: 15px;
+    height: 15px;
+    border: 1px solid black;  
+  }
+  
+}
+button {
+  background: rgb(248, 241, 241);
+}
+button.active {
   background-color: greenyellow;
-  float: left;
 }
-.seat-container .note>p{
-  width: 150px;
-  float: left;
-  
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
-}
-.seat-container .note1{
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 220px;
-  top: 35px;
+button.has_sold {
   background-color: red;
-  float: left;
 }
-.seat-container .note1>p{
-  width: 150px;
-  float: left;
-  
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
+
+.note1 .box-color {
+  background-color: greenyellow;
 }
-.seat-container .note2{
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 370px;
-  top: 35px;
-  background-color: rgb(214, 210, 210);
-  float: left;
+.note2 .box-color {
+  background-color: red;
 }
-.seat-container .note2>p{
-  width: 150px;
-  float: left;
-  
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
+.note3 .box-color {
+  background-color: rgb(248, 241, 241);
 }
-.seat-container .note3{
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 530px;
-  top: 35px;
-  background-color: blue;
-  float: left;
+.note4 .box-color {
+  background-color: rgb(62, 62, 250);
 }
-.seat-container .note3>p{
-  width: 150px;
-  float: left;
-  
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
+.seat-container button {
+  color : #333;
+  cursor: pointer;
+  font-weight: 500;
 }
 
 @media (min-width:320px) and (max-width:1024px){
   .seat-container{
     width: 230px;
     padding-right: 10%;
-  }
-  .alphabet{
-    width: 10%;
-    margin-left: 30%;
-    margin-bottom: 15%;
-      
   }
   .seat-container p{
     margin-left: -3px;
@@ -170,18 +146,8 @@
   margin-left: 50px;
 }
 @media (min-width:1024px) and (max-width:1800px) {
-  .seat-container  .alphabet{
-    position: relative;
-    margin-left: -43px;
-    
-  }
   .seat-container{
           width: 720px;
   }
   
 }
-
-
-
-
-
