--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,11 +177,12 @@ iframe {
   width: 40%;
   min-height: 720px;
   border: 2px solid black;
-  position: relative;
-  left: 30%;
-  margin-top: 100px;
+  margin-top: 50px;
   text-align: center;
   padding-top: 30px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
   background-color: #C4DFE6;
   display: flexbox;
   flex-wrap: wrap;
@@ -189,26 +190,32 @@ iframe {
 
 .seat-container .alphabet {
   width: 25px;
-  height: 22px;
+  height: 25px;
   border: 1px solid #FB6542;
-  position: relative;
-  left: 50px;
-  margin-top: 10px;
-  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
+  text-transform: uppercase;
   background-color: #FB6542;
 }
 
-.seat-container .alphabet > p {
-  left: 6px;
-  position: absolute;
-  top: -14px;
+.seat-container .line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 40px;
+  padding: 10px;
+}
+
+.linenumber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
 }
 
 .seat-container .linenumber > button {
-  position: relative;
-  left: 30px;
-  bottom: 20px;
   border: 1px solid #FB6542;
 }
 
@@ -222,91 +229,68 @@ iframe {
   background-color: black;
 }
 
-.seat-container .note {
+.notes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 25px;
+}
+
+.note {
+  display: flex;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  font-size: 13px;
+}
+.note p {
+  margin: 0 !important;
+}
+.note .box-color {
   width: 15px;
   height: 15px;
   border: 1px solid black;
-  position: relative;
-  left: 50px;
-  top: 35px;
+}
+
+button {
+  background: rgb(248, 241, 241);
+}
+
+button.active {
   background-color: greenyellow;
-  float: left;
 }
 
-.seat-container .note > p {
-  width: 150px;
-  float: left;
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
-}
-
-.seat-container .note1 {
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 220px;
-  top: 35px;
+button.has_sold {
   background-color: red;
-  float: left;
 }
 
-.seat-container .note1 > p {
-  width: 150px;
-  float: left;
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
+.note1 .box-color {
+  background-color: greenyellow;
 }
 
-.seat-container .note2 {
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 370px;
-  top: 35px;
-  background-color: rgb(214, 210, 210);
-  float: left;
+.note2 .box-color {
+  background-color: red;
 }
 
-.seat-container .note2 > p {
-  width: 150px;
-  float: left;
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
+.note3 .box-color {
+  background-color: rgb(248, 241, 241);
 }
 
-.seat-container .note3 {
-  width: 15px;
-  height: 15px;
-  border: 1px solid black;
-  position: relative;
-  left: 530px;
-  top: 35px;
-  background-color: blue;
-  float: left;
+.note4 .box-color {
+  background-color: rgb(62, 62, 250);
 }
 
-.seat-container .note3 > p {
-  width: 150px;
-  float: left;
-  position: relative;
-  bottom: 18px;
-  font-size: 13pt;
+.seat-container button {
+  color: #333;
+  cursor: pointer;
+  font-weight: 500;
 }
 
 @media (min-width: 320px) and (max-width: 1024px) {
   .seat-container {
     width: 230px;
     padding-right: 10%;
-  }
-  .alphabet {
-    width: 10%;
-    margin-left: 30%;
-    margin-bottom: 15%;
   }
   .seat-container p {
     margin-left: -3px;
@@ -347,11 +331,113 @@ iframe {
 }
 
 @media (min-width: 1024px) and (max-width: 1800px) {
-  .seat-container .alphabet {
-    position: relative;
-    margin-left: -43px;
-  }
   .seat-container {
     width: 720px;
   }
+}
+.movie-container {
+  margin-top: 50px;
+}
+
+.thanh1 {
+  padding: 20px;
+}
+
+.form-button {
+  background-color: rgb(244, 203, 98);
+  border: 0ch;
+}
+
+.thanh1 {
+  float: right;
+  padding-top: 0px;
+}
+
+.thanh1 h1 {
+  border-style: double;
+  width: 350px;
+  height: 200px;
+}
+
+.thanh1 h1 p input {
+  border: 0ch;
+  width: 300px;
+  height: 50px;
+  background-color: rgb(196, 193, 190);
+}
+
+.thanh1 h1 input {
+  border: 0ch;
+  width: 300px;
+  height: 50px;
+  background-color: rgb(255, 119, 0);
+}
+
+.thanh2 {
+  padding-right: 260px;
+  float: right;
+  padding-top: 4%;
+}
+
+.thanh3 {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  flex-direction: column;
+}
+
+.form-group {
+  color: #222;
+}
+.form-group select, .form-group input {
+  width: 300px;
+  height: 40px;
+  border-color: none;
+}
+
+.thanh5 {
+  float: right;
+  height: 30px;
+}
+
+.thanh5 input {
+  height: 37px;
+}
+
+.thanh4 input {
+  height: 35px;
+}
+
+.form-group input {
+  margin-left: 15px;
+}
+
+.thanh5 {
+  margin-left: 2000px;
+  padding-right: 150px;
+}
+
+.form-buton {
+  background-color: rgb(255, 119, 0);
+  border: 0ch;
+  width: 200px;
+  height: 50px;
+  font-weight: 200;
+  text-align: left;
+}
+
+.thanh6 p {
+  border: groove;
+  margin-top: -1px;
+  width: 750px;
+  height: 100px;
+  text-align: left;
+  padding: 20px;
+}
+
+.thanh6 input {
+  text-align: 50px;
+  width: 70px;
+  height: 30px;
+  background-color: 0px;
 }
