--- a/styles/sass/_movie_detail.scss
+++ b/styles/sass/_movie_detail.scss
@@ -100,7 +100,7 @@
   }
   .times {
     width: 100%;
-    background-color: #151F32;
+    background-color: #efefef;
     border: 1px solid #ced0da;
     padding: 35px 20px 25px;
     display: flex;
@@ -117,7 +117,7 @@
         padding: 5px 10px;
         transition: all .2s ease;
         cursor: pointer;
-        color: #fff;
+        color: $white_color;
         &:hover {
           border: 1px solid $secondary_color;
           color : $secondary_color;
