--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 * {
   margin: 0;
   padding: 0;
@@ -264,12 +261,18 @@ img {
 }
 .close-icon {
   position: absolute;
+  border: 0;
+  padding: 0;
   top: 20px;
   right: 20px;
   color : var(--primary-color);
   font-size: 22px;
   font-weight: bold;
   cursor: pointer;
+}
+.close-icon svg {
+  width: 30px;
+  height: 30px;
 }
 .container-form {
   height: 100vh;
