--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -1,6 +1,7 @@
 body {
-  background-image: linear-gradient(170deg, rgb(15, 22, 36), rgb(5, 7, 11)) !important;
-  color : #fff !important;
+  // background-image: linear-gradient(170deg, rgb(15, 22, 36), rgb(5, 7, 11)) !important;
+  background-color: #fff !important;
+  color : $white_color !important;
   font-family: 'Poppins', sans-serif !important;
   height: auto !important;
 }
