--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -2,6 +2,7 @@ $primary_color : rgba(50, 138, 241, 1);
 $primary_dark_color :rgba(21, 31, 50, 1);
 $secondary_color : #F56857;
 $text_color : rgba(120, 144, 156,1);
+$white_color : #333;
 $background_color : rgba(21, 31, 50, 1);
 $bg_button_color : rgba(50,138,241,.2);
 $bg_button_hover_color : rgba(50,138,241,.25);
