--- a/styles/styles.css
+++ b/styles/styles.css
@@ -330,6 +330,13 @@ button.active {
 
 button.has_sold {
   background-color: red;
+  cursor: not-allowed !important;
+  user-select: none !important;
+  color: #fff !important;
+  cursor: not-allowed;
+}
+button.has_sold:hover {
+  background-color: red !important;
 }
 
 .note1 .box-color {
@@ -345,7 +352,7 @@ button.has_sold {
 }
 
 .note4 .box-color {
-  background-color: rgb(62, 62, 250);
+  background-color: rgb(129, 129, 201);
 }
 
 .seat-container button {
