--- a/admin/assets/style.css
+++ b/admin/assets/style.css
@@ -18,6 +18,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
   position: relative;
+  padding: 0 20px;
 }
 html {
   position: relative;
@@ -498,4 +499,15 @@ img {
     max-width: 100%;
     padding-top: 20px;
   }
+}
+.bill-container {
+  margin-top: 100px;
+}
+#select_days {
+  width: fit-content;
+}
+.content {
+  padding: 25px;
+  padding-top: 0;
+  display: block;
 }
