--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #fff !important;
   color: #333 !important;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Roboto", sans-serif !important;
   height: auto !important;
 }
 
@@ -422,9 +422,17 @@ button.has_sold:hover {
 .movie-container {
   margin-top: 50px;
 }
+.movie-container-in {
+  display: flex;
+  align-items: flex-start;
+  column-gap: 30px;
+  max-width: 720px;
+  margin: 25px 0;
+}
 
-.thanh1 {
-  padding: 20px;
+.thanh3 {
+  max-width: 720px;
+  margin: 25px 0;
 }
 
 .form-button {
@@ -438,9 +446,7 @@ button.has_sold:hover {
 }
 
 .thanh1 h1 {
-  border-style: double;
-  width: 350px;
-  height: 200px;
+  margin-top: 0;
 }
 
 .thanh1 h1 p input {
@@ -486,6 +492,10 @@ button.has_sold:hover {
 
 .thanh5 input {
   height: 37px;
+}
+
+.thanh4 {
+  margin: 25px 0;
 }
 
 .thanh4 input {
@@ -549,4 +559,42 @@ button.has_sold:hover {
   border: 1px solid #F56857;
   color: #F56857;
   transition: all 0.2s ease;
+}
+
+.star-icon {
+  color: rgb(244, 203, 98);
+}
+
+.successful-container {
+  display: flex;
+  justify-content: center;
+  column-gap: 80px;
+  margin-top: 70px;
+  align-items: center;
+}
+
+.left-content #placeHolder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 350px;
+}
+.left-content #placeHolder img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+}
+
+.right-content h1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.5;
+  color: rgb(50, 138, 241);
+}
+.right-content p {
+  max-width: 400px;
+  font-size: 20px;
+  font-weight: 500;
 }
