--- a/styles/styles.css
+++ b/styles/styles.css
@@ -604,6 +604,9 @@ button.has_sold:hover {
   justify-content: space-between;
   align-items: center;
   margin-top: 25px;
+  padding-bottom: 15px;
+  margin-bottom: 50px;
+  border-bottom: 1px solid #ddd;
 }
 .heading-block a.btn {
   padding: 5px 10px;
@@ -612,16 +615,14 @@ button.has_sold:hover {
 }
 
 .form-user {
-  margin-top: 30px;
   display: flex;
   align-items: flex-start;
   column-gap: 100px;
 }
 .form-user .heading {
   text-transform: capitalize;
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 20px;
+  font-size: 18px;
+  margin-bottom: 25px;
   margin-top: 0px;
   display: inline-block;
 }
@@ -656,7 +657,7 @@ button.has_sold:hover {
 }
 .form-user .form-group label {
   font-size: 18px;
-  color: rgb(50, 138, 241);
+  color: #555;
 }
 .form-user .form-group input {
   width: 100%;
@@ -681,4 +682,88 @@ button.has_sold:hover {
 }
 .form-user .btn:hover {
   color: #fff;
+}
+
+.user-nav {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  column-gap: 40px;
+}
+.user-nav-item {
+  list-style-type: none;
+}
+.user-nav-link {
+  font-weight: 600;
+  font-size: 20px;
+  text-transform: capitalize;
+  color: rgb(50, 138, 241);
+}
+.user-nav-link:hover {
+  color: rgb(50, 138, 241);
+}
+
+.error {
+  color: orangered;
+  font-size: 14px;
+  font-style: italic;
+  font-weight: normal;
+  margin: 10px 0;
+}
+
+tbody tr {
+  max-height: 200px;
+  overflow: hidden;
+}
+
+thead tr th {
+  background: #ddd;
+  padding: 5px;
+  min-width: 80px;
+  text-align: center !important;
+}
+
+tbody tr td {
+  padding: 5px;
+  text-align: justify;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  min-width: 80px;
+}
+
+tbody tr td {
+  border: 1px solid #333;
+  border-top: 0;
+  border-right: 0;
+}
+
+tbody {
+  margin: 0 auto;
+}
+
+th {
+  text-transform: capitalize;
+}
+
+.td-btn button {
+  margin: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+tbody tr td {
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: auto;
+}
+
+tbody tr td:last-child {
+  border-right: 1px solid #333;
+}
+
+.table td:nth-child(2) {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
